5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1679_1105.log
== TEST (2019-04-27 21:05:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:16:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:17:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:17:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:18:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:19:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
File "XXXX", line 5
    if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:19:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
File "XXXX", line 5
    if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:19:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
File "XXXX", line 5
    if (b=="lobo" b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:19:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b=="lobo" or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:20:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b=="lobo" or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:21:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
	if (b==lobo):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b==leao):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b==veado):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b==dragao):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b==rosa):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:23:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:23:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- EXECUTION TIME:
0.130273
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:23:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entraada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:23:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:24:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Brasao: Tyrell")
	
-- EXECUTION TIME:
0.199344
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:24:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Brasao: Tyrell")
	
-- EXECUTION TIME:
0.187126
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Brasao: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (b==lobo or b==leao or b==veado or b==dragao or b==rosa or b==sol or b==lula or b==esfolado or b==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:25:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Brasao: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Brasao: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Brasao: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Brasao: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	
-- EXECUTION TIME:
0.150609
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:31:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.226168
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:32:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:33:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao: ")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.184556
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:34:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:",b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:34:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		print("Entrada:", b)
		print("Casa: Stark")
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:",b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.1671
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:51:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c=Stark
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:52:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="leao"):
		print("Entrada:", b)
		print("Casa: Lannister")
	if (b=="veado"):
		print("Entrada:", b)
		print("Casa: Baratheon")
	if (b=="dragao"):
		print("Entrada:", b)
		print("Casa: Targaryen")
	if (b=="rosa"):
		print("Entrada:", b)
		print("Casa: Tyrell")
	if (b=="sol"):
		print("Entrada:", b)
		print("Casa: Martell")
	if (b=="lula"):
		print("Entrada:", b)
		print("Casa: Greyjoy")
	if (b=="esfolado"):
		print("Entrada:", b)
		print("Casa: Bolton")
	if (b=="turta"):
		print("Entrada:", b)
		print("Casa: Tully")
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:55:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:55:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.170207
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:55:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
	if (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:57:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:57:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:57:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:57:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.278811
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:58:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:58:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao:")

if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada: X")
	print("Brasao invalido")
-- EXECUTION TIME:
0.146514
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:00:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")

if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:00:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")

if (b=="lobo"):
		c="Stark"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="leao"):
		c="Lannister"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="veado"):
		c="Baratheon"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="dragao"):
		c="Targaryen"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="rosa"):
		c="Tyrell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="sol"):
		c="Martell"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="lula"):
		c="Greyjoy"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="esfolado"):
		c="Bolton"
		print("Entrada:", b)
		print("Casa:", c)
elif (b=="turta"):
		c="Tully"
		print("Entrada:", b)
		print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.142968
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:01:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")

if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:01:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")

if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.166028
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:04:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")
if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:04:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")
if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.136327
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")
if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", b)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:57:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b=input("Qual o Brasao: ")
if (b=="lobo"):
	c="Stark"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="leao"):
	c="Lannister"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="veado"):
	c="Baratheon"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="dragao"):
	c="Targaryen"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="rosa"):
	c="Tyrell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="sol"):
	c="Martell"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="lula"):
	c="Greyjoy"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="esfolado"):
	c="Bolton"
	print("Entrada:", b)
	print("Casa:", c)
elif (b=="turta"):
	c="Tully"
	print("Entrada:", b)
	print("Casa:", c)
else:
	print("Entrada:", b)
	print("Brasao invalido")
-- EXECUTION TIME:
0.190071
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
